<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragmentHomeTopLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_72"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_kreactive" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragmentHomeFirstWordTil"
            android:layout_width="@dimen/spacing_empty"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:background="@drawable/background_top_edit_text"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentHomeTopLogo">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragmentHomeFirstWordEt"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/fragment_home_first_word_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragmentHomeSecondWordTil"
            android:layout_width="@dimen/spacing_empty"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_xtiny"
            android:layout_marginEnd="@dimen/spacing_large"
            android:background="@drawable/background_center_edit_text"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentHomeFirstWordTil">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragmentHomeSecondWordEt"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/fragment_home_second_word_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragmentHomeFirstNumberTil"
            android:layout_width="@dimen/spacing_empty"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_xtiny"
            android:layout_marginEnd="@dimen/spacing_large"
            android:background="@drawable/background_center_edit_text"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentHomeSecondWordTil">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragmentHomeFirstNumberEt"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/fragment_home_first_number_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragmentHomeSecondNumberTil"
            android:layout_width="@dimen/spacing_empty"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_xtiny"
            android:layout_marginEnd="@dimen/spacing_large"
            android:background="@drawable/background_center_edit_text"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentHomeFirstNumberTil">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragmentHomeSecondNumberEt"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/fragment_home_second_number_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragmentHomeLimitTil"
            android:layout_width="@dimen/spacing_empty"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_xtiny"
            android:layout_marginEnd="@dimen/spacing_large"
            android:background="@drawable/background_bottom_edit_text"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentHomeSecondNumberTil">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragmentHomeLimitEt"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/fragment_home_limit_hint"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragmentHomeSeeResultsBt"
            style="?attr/ButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginVertical="@dimen/spacing_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/fragment_home_see_results"
            app:layout_constraintTop_toBottomOf="@+id/fragmentHomeLimitTil"
            tools:text="Results" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>




